# TranHuynhPortfolio

./: Procfile  build.sh  manage.py  pyproject.toml  readme.md  requirements.txt
TranHuynhPortfolio/: asgi.py  settings.py  urls.py  wsgi.py
TranHuynhPortfolio/staticfiles/: staticfiles.json
TranHuynhPortfolio/staticfiles/css/: style.d4f6f5850b88.css
main_app/: forms.py  models.py  urls.py  views.py
main_app/migrations/: 0001_initial.py  0002_feedback_feedback.py  0003_auto_20220811_0322.py
main_app/templates/: about.html  base.html  feedback.html  home.html  projects.html  test.html
