[tool.poetry]
name = "tranhuynhportfolio"
version = "0.1.0"
description = ""
authors = ["hnhtran <tran_eetas@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
appnope = "0.1.3"
asgiref = "3.5.2"
asttokens = "2.0.5"
backcall = "0.2.0"
boto3 = "1.24.34"
botocore = "1.27.34"
certifi = "2022.6.15"
click = "8.1.3"
decorator = "5.1.1"
distlib = "0.3.5"
dj-database-url = "0.5.0"
django = "4.0.6"
django-cors-headers = "3.13.0"
django-database-url = "1.0.3"
django-environ = "0.9.0"
django-heroku = "0.3.1"
djangorestframework = "3.13.1"
executing = "0.8.3"
filelock = "3.7.1"
flask = "2.1.3"
gunicorn = "20.1.0"
ipython = "8.4.0"
itsdangerous = "2.1.2"
jedi = "0.18.1"
jinja2 = "3.1.2"
jmespath = "1.0.1"
markupsafe = "2.1.1"
matplotlib-inline = "0.1.3"
parso = "0.8.3"
pexpect = "4.8.0"
pickleshare = "0.7.5"
pipenv = "2022.7.4"
platformdirs = "2.5.2"
prompt-toolkit = "3.0.30"
psycopg2 = "2.9.3"
psycopg2-binary = "2.9.3"
ptyprocess = "0.7.0"
pure-eval = "0.2.2"
pygments = "2.12.0"
python-dateutil = "2.8.2"
python-dotenv = "0.20.0"
pytz = "2022.1"
s3transfer = "0.6.0"
six = "1.16.0"
sqlparse = "0.4.2"
stack-data = "0.3.0"
traitlets = "5.3.0"
urllib3 = "1.26.10"
virtualenv = "20.15.1"
virtualenv-clone = "0.5.7"
wcwidth = "0.2.5"
werkzeug = "2.1.2"
whitenoise = "6.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
