[tool.poetry]
name = "tranhuynhportfolio"
version = "0.1.0"
description = ""
authors = ["hnhtran <tran_eetas@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.8"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.8.5"
whitenoise = {extras = ["brotli"], version = "^5.1.0"}
gunicorn = "^20.0.4"

[build-system]
requires = ["poetry-core>=0.12"]
build-backend = "poetry.core.masonry.api"
